[gd_scene load_steps=5 format=2]

[ext_resource path="res://boxes/hitbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://imgs/bolt2.png" type="Texture" id=2]
[ext_resource path="res://Enities/player/BoltAttack.gd" type="Script" id=3]


[sub_resource type="CapsuleShape2D" id=1]
radius = 6.0
height = 2.0

[node name="BoltAttack" instance=ExtResource( 1 )]
collision_mask = 9
monitoring = true
script = ExtResource( 3 )

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="1"]
texture = ExtResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="." index="2"]
position = Vector2( 4.17233e-07, 4.17233e-07 )
scale = Vector2( 0.8, 0.8 )

[connection signal="area_entered" from="." to="." method="_on_boltAttack_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_boltAttack_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
